# spin_lexer

./: CMakeLists.txt  README.md  test.sp
src/compiler/: lexer.cc  lexer.hh  lexer.rules  main.cc  parser.hh  utf32.cc  utf32.hh
src/compiler/generator/: CMakeLists.txt  ast.cc  ast.hh  automata.cc  automaton.cc  automaton.hh  lexer.cc  lexer.hh  rules.cc  rules.hh
